# cs550-Physics

./: CMakeLists.txt  Clean.bat  README.md
.bin/: imgui.ini
dependencies/include/glad/: glad.h
dependencies/lib/: glad.lib  gtest.exp  gtest.lib  gtest_main.exp  gtest_main.lib  gtest_maind.exp  gtest_maind.lib  gtestd.exp  gtestd.lib  libglfw.so.3
resources/scenes/: 1_Inertia.txt  2_Balnce.txt  3_Jumper.txt  4_Slope.txt  5_StaticWall.txt  6_DynamicWall.txt  7_Fall.txt  8_Domino.txt
resources/shaders/: color.frag  color.vert  raw.frag  raw.vert
src/: main.cpp  main_gtest.cpp
src/engine/: editor.cpp  editor.h  math_utils.h  scene.cpp  scene.h
src/graphics/: camera.cpp  camera.h  graphics.cpp  graphics.h  mesh.cpp  mesh.h
src/physics/: collision.cpp  collision.h  contact.h  half_edge.cpp  half_edge.h  intersection.cpp  intersection.h  physics.cpp  physics.h  rigid_body.cpp  rigid_body.h  solver.cpp  solver.h
src/tests/: test_half_edge.cpp  test_inertia.cpp
